2014-10-08  Steve Ellcey  <sellcey@mips.com>

	* config/mips/linux64.h: Remove.
	* config/mips/gnu-user64.h: Remove.
	* gcc.config (mips*-*-*): Remove references to linux64.h and
	gnu-user64.h
	* config/mips/gnu-user.h (GNU_USER_TARGET_LINK_SPEC): Replace
	with modified version from gnu-user64.h.
	(LINUX_DRIVER_SELF_SPECS): Update parts from gnu-user64.h.
	(LOCAL_LABEL_PREFIX): Copy from gnu-user64.h.
	* config/mips/linux.h (GNU_USER_LINK_EMULATION32): Copy from
	linux64.h.
	(GNU_USER_LINK_EMULATION64): Ditto.
	(GNU_USER_LINK_EMULATIONN32): Ditto.
	(GLIBC_DYNAMIC_LINKER32): Ditto.
	(GLIBC_DYNAMIC_LINKER64): Ditto.
	(GLIBC_DYNAMIC_LINKERN32): Ditto.
	(UCLIBC_DYNAMIC_LINKER32): Ditto.
	(UCLIBC_DYNAMIC_LINKER64): Ditto.
	(UCLIBC_DYNAMIC_LINKERN32): Ditto.
	(BIONIC_DYNAMIC_LINKERN32): Ditto.
	(GNU_USER_DYNAMIC_LINKERN32): Ditto.
	(GLIBC_DYNAMIC_LINKER): Delete.
	(UCLIBC_DYNAMIC_LINKER): Delete.

2014-10-08  Joern Rennecke  <joern.rennecke@embecosm.com>
	    Richard Biener  <rguenther@suse.de>

	* cfgexpand.c (expand_debug_expr) <TARGET_MEM_REF>:
	Get address space from operand 0 (BASE).

2014-10-07  Iain Sandoe  <iain@codesourcery.com>

	PR target/61387
	* config/i386/i386.c (x86_output_mi_thunk): Fix darwin fallout.

2014-10-07  Aldy Hernandez  <aldyh@redhat.com>

	* dwarf2out.c: Remove current_function_has_inlines.
	(gen_subprogram_die): Same.
	(gen_inlined_subroutine_die): Same.

2014-10-07  Ilya Tocar  <ilya.tocar@intel.com>

	* config/i386/adxintrin.h (_subborrow_u64): Use long long for param
	type.
	(_addcarry_u64): Ditto.
	(_addcarryx_u64): Ditto.

2014-10-07  Eric Botcazou  <ebotcazou@adacore.com>

	* cgraph.h (cgraph_node::get_fun): Declare.
	* cgraph.c (cgraph_node::get_fun): New method.
	* ipa-inline.c (can_inline_edge_p): Use it.

2014-10-07  Eric Botcazou  <ebotcazou@adacore.com>

	* lto-opts.c (lto_write_options): Handle -fmath-errno, -fsigned-zeros
	and -ftrapping-math.
	* lto-wrapper.c (merge_and_complain): Likewise.
	(run_gcc): Likewise.
